--- a/src/main/resources/view/css/TextField.css
+++ b/src/main/resources/view/css/TextField.css
@@ -1,6 +1,10 @@
+@font-face {
+    src: url('../../assets/fonts/Roboto-Medium.ttf');
+}
 .text-field {
     -fx-background-color: rgba(48, 94, 193, 0.7), white;
     -fx-background-insets: -1, 0;
+    -fx-font-family: "Roboto Medium";
 }
 
 .text-field:focused {
