--- a/src/main/resources/view/css/table.css
+++ b/src/main/resources/view/css/table.css
@@ -1,3 +1,7 @@
+@font-face {
+    src: url('../../assets/fonts/Roboto-Regular.ttf');
+}
+
 .combo-box{
     -fx-background-color: white;
     -fx-border-color: #D3D3D3;
@@ -84,10 +88,13 @@
     -fx-background-color :#FAFAFA;
     -fx-pref-width: 190px;
     -fx-pref-height: 65px;
-     -fx-font-size:14px;
+    -fx-font-size:15px;
+    -fx-font-family: "Roboto Regular";
+    -fx-text-fill: #727272;
 }
 .toggle-button:selected{
     -fx-background-color :#EDF1F8;
+    -fx-text-fill: #2A53A9;
     }
 .toggle-button:hover{
     -fx-background-color :#EDF1F8;
