--- a/src/main/resources/view/DistancePopup.fxml
+++ b/src/main/resources/view/DistancePopup.fxml
@@ -14,11 +14,11 @@
          </font>
       </Label>
       <TextField fx:id="distLocation" layoutX="33.0" layoutY="98.0" prefHeight="31.0" prefWidth="414.0" />
-      <Button layoutX="30.0" layoutY="294.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
+      <Button layoutX="30.0" layoutY="294.0" mnemonicParsing="false" onAction="#createOrUpdateDistance" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button layoutX="201.0" layoutY="294.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <Button layoutX="201.0" layoutY="294.0" mnemonicParsing="false" onAction="#cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
       <TextField fx:id="length" layoutX="30.0" layoutY="162.0" prefHeight="31.0" prefWidth="290.0" />
       <Label layoutX="30.0" layoutY="137.0" prefHeight="25.0" prefWidth="131.0" text="Длина, метров">
          <font>
