--- a/src/main/resources/view/GroupPopup.fxml
+++ b/src/main/resources/view/GroupPopup.fxml
@@ -21,11 +21,11 @@
          </font>
       </Label>
       <TextField fx:id="groupName" layoutX="46.0" layoutY="109.0" prefHeight="31.0" prefWidth="414.0" />
-      <Button layoutX="44.0" layoutY="263.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
+      <Button layoutX="44.0" layoutY="263.0" mnemonicParsing="false" onAction="#createOrUpdateGroup" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button layoutX="209.0" layoutY="263.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <Button layoutX="209.0" layoutY="263.0" mnemonicParsing="false" onAction="#cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
       <Label layoutX="46.0" layoutY="162.0" prefHeight="25.0" prefWidth="92.0" text="Возраст  от">
          <font>
             <Font size="16.0" />
